# pax_tt_recommender

./: .gitignore  README.md  pyproject.toml  todo.md
.cursor/rules/: remove-outdated-code.mdc
backend/: Dockerfile  alembic.ini  run_tests.py
backend/.cursor/rules/: backend-model-consistency.mdc
backend/alembic/: env.py
backend/alembic/versions/: 163d675a5e9d_update_recommendation_levels.py  2ef6c56d7dc0_remove_user_preference_tables.py  69941843136f_add_user_auth_tables.py  d258c28b421e_rename_recommendation_to_recommendation_.py  ed8c617c6e84_remove_email_from_users_add_is_admin.py
backend/app/: crud.py  crud.py.bak  database.py  import_csv.py  import_data.py  import_pax_data.py  main.py  models.py  recommender.py  schemas.py  security.py  seed_data.py
backend/logs/: README.md
backend/scripts/: setup_database.py
backend/tests/: README.md  __init__.py  create_indexes.py  test_db_queries.py  test_performance.py  test_player_filter.py
crawler/: __init__.py
crawler/notebooks/: crawler_testing.ipynb  testing.ipynb
crawler/src/: __init__.py  crawler.py  create_embeddings.py  data_processor.py  download_images.py  get_game_data.py  get_ranks.py  get_ratings.py  recommender.py
crawler/tests/: __init__.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  config.js
frontend/src/components/: GameCard.js  GameDetails.js  GameList.js  LikedGamesDialog.js  Navbar.js  ProtectedRoute.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: GameDetail.js  GameList.js  LoginPage.js
scripts/: build-for-production.sh
