[tool.poetry]
name = "pax-tt-recommender"
version = "0.1.0"
description = "BoardGameGeek data crawler and recommender system"
authors = ["MichoelSnow <michoelsnow@gmail.com>"]
readme = "README.md"
packages = [
    { include = "crawler" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
notebook = "==6.*"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-nbextensions-configurator = "^0.6.4"
black = "^25.1.0"
requests = "^2.32.3"
pandas = "^2.2.3"
selenium = "^4.32.0"
beautifulsoup4 = "^4.13.4"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
